--- a/cloudformation/launch-defaults.json
+++ b/cloudformation/launch-defaults.json
@@ -4,5 +4,6 @@
     "SSHKeyName": "com7-deeboon.pem",
     "AMIId": "ami-0885ade43bb4b988d",
     "InstanceType": "t3.2xlarge",
-    "NumberOfInstances": "1"
+    "NumberOfInstances": "1",
+    "Region": "ap-southeast-1"
 }
